--- a/DX12.vcxproj.filters
+++ b/DX12.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClCompile Include="math\Color.cpp">
       <Filter>math</Filter>
     </ClCompile>
+    <ClCompile Include="main_box.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GeometryGenerator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="math\Mat4.h">
@@ -92,5 +98,16 @@
     <ClInclude Include="platform\PlatformConfig.h">
       <Filter>platform</Filter>
     </ClInclude>
+    <ClInclude Include="UploadBuffer.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GeometryGenerator.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Shaders\color.hlsl">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
