--- a/DX12.vcxproj.filters
+++ b/DX12.vcxproj.filters
@@ -142,5 +142,8 @@
     <None Include="BoxApp\color.hlsl">
       <Filter>BoxApp</Filter>
     </None>
+    <None Include="ShapesApp\color.hlsl">
+      <Filter>Shapes</Filter>
+    </None>
   </ItemGroup>
 </Project>
