--- a/DX12.vcxproj.filters
+++ b/DX12.vcxproj.filters
@@ -28,6 +28,9 @@
     <Filter Include="Shapes">
       <UniqueIdentifier>{5d4ef10e-7c1f-4b2d-9134-1a23bb31a4cf}</UniqueIdentifier>
     </Filter>
+    <Filter Include="BoxAppTwoSlot">
+      <UniqueIdentifier>{2dc79062-0b98-4bc8-a0d7-22bcde8227d8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -74,6 +77,9 @@
     </ClCompile>
     <ClCompile Include="ShapesApp\ShapesApp.cpp">
       <Filter>Shapes</Filter>
+    </ClCompile>
+    <ClCompile Include="BoxAppTwoSlot\BoxAppTwoSlot.cpp">
+      <Filter>BoxAppTwoSlot</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -134,6 +140,9 @@
     <ClInclude Include="ShapesApp\ShapesApp.h">
       <Filter>Shapes</Filter>
     </ClInclude>
+    <ClInclude Include="BoxAppTwoSlot\BoxAppTwoSlot.h">
+      <Filter>BoxAppTwoSlot</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\color.hlsl">
@@ -144,6 +153,9 @@
     </None>
     <None Include="ShapesApp\color.hlsl">
       <Filter>Shapes</Filter>
+    </None>
+    <None Include="BoxAppTwoSlot\color.hlsl">
+      <Filter>BoxAppTwoSlot</Filter>
     </None>
   </ItemGroup>
 </Project>
