--- a/DX12.vcxproj
+++ b/DX12.vcxproj
@@ -48,6 +48,9 @@
     <ClCompile Include="ShapesApp\ShapesApp.cpp" />
     <ClCompile Include="ShapesSkullApp\FrameResource.cpp" />
     <ClCompile Include="ShapesSkullApp\ShapesSkullApp.cpp" />
+    <ClCompile Include="TexBox\TexBox.cpp" />
+    <ClCompile Include="TexWaves\FrameResource.cpp" />
+    <ClCompile Include="TexWaves\TexWaves.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BoxAppTwoSlot\BoxAppTwoSlot.h" />
@@ -80,6 +83,9 @@
     <ClInclude Include="ShapesApp\ShapesApp.h" />
     <ClInclude Include="ShapesSkullApp\FrameResource.h" />
     <ClInclude Include="ShapesSkullApp\ShapesSkullApp.h" />
+    <ClInclude Include="TexBox\TexBox.h" />
+    <ClInclude Include="TexWaves\FrameResource.h" />
+    <ClInclude Include="TexWaves\TexWaves.h" />
     <ClInclude Include="UploadBuffer.h" />
   </ItemGroup>
   <ItemGroup>
@@ -125,6 +131,19 @@
       <FileType>Document</FileType>
     </None>
     <None Include="LitColumns\LightingUtil.hlsl">
+      <FileType>Document</FileType>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="TexBox\color.hlsl">
+      <FileType>Document</FileType>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="TexWaves\Default.hlsl">
+      <FileType>Document</FileType>
+    </None>
+    <None Include="TexWaves\LightingUtil.hlsl">
       <FileType>Document</FileType>
     </None>
   </ItemGroup>
