--- a/DX12.vcxproj
+++ b/DX12.vcxproj
@@ -47,6 +47,7 @@
     <ClCompile Include="math\Vec2.cpp" />
     <ClCompile Include="math\Vec3.cpp" />
     <ClCompile Include="math\Vec4.cpp" />
+    <ClCompile Include="MultiTexBox\MultiTexBox.cpp" />
     <ClCompile Include="ShapesApp\FrameResource.cpp" />
     <ClCompile Include="ShapesApp\ShapesApp.cpp" />
     <ClCompile Include="ShapesSkullApp\FrameResource.cpp" />
@@ -84,6 +85,7 @@
     <ClInclude Include="math\Vec2.h" />
     <ClInclude Include="math\Vec3.h" />
     <ClInclude Include="math\Vec4.h" />
+    <ClInclude Include="MultiTexBox\MultiTexBox.h" />
     <ClInclude Include="platform\PlatformConfig.h" />
     <ClInclude Include="ShapesApp\FrameResource.h" />
     <ClInclude Include="ShapesApp\ShapesApp.h" />
@@ -158,6 +160,11 @@
       <FileType>Document</FileType>
     </None>
     <None Include="BlendWaves\LightingUtil.hlsl">
+      <FileType>Document</FileType>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="MultiTexBox\color.hlsl">
       <FileType>Document</FileType>
     </None>
   </ItemGroup>
